kubernetes/applications/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "1"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: 178.39.124.203
  name: argo-server-ingress
  namespace: argo
spec:
  ingressClassName: nginx
  rules:
  - host: argo.lilalala.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argo.lilalala.com
    secretName: argocd-server-tls
